--- a/app/globals.css
+++ b/app/globals.css
@@ -3,5 +3,8 @@
 @tailwind utilities;
 
 :root {
-    background-color: rgb(255, 248, 235);
+    background-image: url("../public/wave-haikei.svg") ;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
